--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 		<meta name="description" content="Web site created using create-react-app" />
 		<link rel="apple-touch-icon" href="./logo192.png" />
 		<link rel="manifest" href="./manifest.json" />
+		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
 		<title>React App</title>
-		<script defer="defer" src="./static/js/main.caeedf19.js"></script>
-		<link href="./static/css/main.7306cc81.css" rel="stylesheet" />
+		<script defer="defer" src="./static/js/main.1eb627fc.js"></script>
+		<link href="./static/css/main.494ac4d6.css" rel="stylesheet" />
 	</head>
+
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
 		<div id="root"></div>
